--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -1,1 +1,15 @@
 @import "normalize.css/normalize"
+
+.profile
+  text-align: center
+  padding: 20px
+
+  h2
+    margin-bottom: 0
+
+  h3
+    margin: 0
+    opacity: 0.5
+
+  .location
+    font-weight: bold
