--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -1,6 +1,6 @@
 @import "normalize.css/normalize"
 
-.profile
+section.profile
   text-align: center
   padding: 20px
 
@@ -13,3 +13,37 @@
 
   .location
     font-weight: bold
+
+header
+  background-color: #23b5e1
+  text-align: center
+  padding-top: 5px
+
+  h1
+    opacity: 0.6
+
+nav
+  margin-top: 5px
+
+  ul
+    text-align: center
+    border-bottom: 1px solid black
+    padding: 10px
+
+    li
+      display: inline
+      border-top: 1px solid
+      border-left: 1px solid
+      border-right: 1px solid
+      border-radius: 5px 5px 0 0
+      padding: 10px
+      background-color: #dedede
+      border-bottom: 1px solid black
+
+      &.active
+        background-color: white
+        border-bottom: 1px solid white
+
+      a
+        text-decoration: none
+        color: #333
