--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -47,3 +47,32 @@ nav
       a
         text-decoration: none
         color: #333
+
+
+ul.repoList
+  padding: 0
+
+  li
+    list-style: none
+    margin: 10px auto
+    padding: 10px
+    border-bottom: 1px solid #999
+
+    .name
+      font-size: 1.5em
+      font-weight: bold
+
+      a
+        text-decoration: none
+        color: #23b5e1
+
+    .desc
+      opacity: 0.6
+      font-size: 0.8em
+
+    .lang
+      opacity: 0.5
+      float: right
+      font-size: 0.6em
+      font-weight: bold
+      padding: 10px
