--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -76,3 +76,19 @@ ul.repoList
       font-size: 0.6em
       font-weight: bold
       padding: 10px
+
+#searchForm
+  position: absolute
+  top: 90px
+  right: 50px
+
+  #userSearch, button
+    border-radius: 4px
+    border-style: none
+
+  #userSearch
+    height: 20px
+    line-height: 20px
+
+  button
+    background-color: white
